--- a/2dshooter/game.html
+++ b/2dshooter/game.html
@@ -17,6 +17,8 @@
 	<script src="input.js"></script>
 	<script src="render.js"></script>
 	<script src="entity.js"></script>
+	<script src="gameobjects.js"></script>
+	<script src="navmesh.js"></script>
 	<script src="game.js"></script>
 </body>
 </html>
